--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </ol>
 
 <h2>WEB</h2>
-<p>spider web 지영아 안녕? 
-  <img src="web.jpg" width="450"></p>
+<p> 지영아 안녕? 
+  <img src="web.png" width="450"></p>
 </body>
 </html>
